2004-01-19  Radek Doulik  <rodo@ximian.com>

	* gui/print.c (print_day_add_event): uncomment and use
	ECalModelComponent
	(print_day_details): use e_cal_model_generate_instances
	(print_day_details_cb): use ECalModelGenerateInstancesData
	(print_day_long_event): use event color
	(print_day_event): ditto

2004-01-18  Radek Doulik  <rodo@ximian.com>

	* gui/print.c (print_border_with_triangles): use rgb color as
	fillcolor
	(print_week_day_event): ditto
	(print_table): set page orientation, it may be changed from last
	printing
	(print_comp): ditto

	* gui/e-cal-model.c (e_cal_model_get_rgb_color_for_component): new
	helper function, gets component color as rgb double values

	* gui/print.c (print_week_summary_cb): uncommented and updated for
	e_cal_model_generate_instances
	(print_week_summary): use e_cal_model_generate_instances
	(print_border_with_triangles): pass rgb fillcolor
	(print_border_rgb): new function to print border with rgb color
	background

	* gui/e-cal-model.c (e_cal_model_generate_instances): new
	function, similar to e_cal_generate_instances. see comments to
	understand how to use cb_data

2004-01-17  JP Rosevear <jpr@ximian.com>

	* gui/e-calendar-table.c (e_calendar_table_delete_selected): don't
	create the component if there is a multiple selection

	Fixes #52266
	
2004-01-17  JP Rosevear <jpr@ximian.com>

	* gui/e-cal-view.c (on_print): we are required to pass in the end
	in-out arg

	Fixes #52972
	
2004-01-17  JP Rosevear <jpr@ximian.com>

	* gui/print.h: update protos

	* gui/print.c (print_title): util routine to print a title
	(print_table): print out an etable

	* gui/calendar-commands.c (print): handle printing the list view

	* gui/e-cal-list-view.etspec: draw the grid to mimic tasks

	* gui/tasks-control.c (tasks_control_print_cmd): use print_table

	Fixes #51751, #52958
	
2004-01-16  JP Rosevear <jpr@ximian.com>

	* gui/calendar-commands.c (print): handle list view by printing
	the month

2004-01-16  JP Rosevear <jpr@ximian.com>
