@@ -6,6 +6,8 @@
 	(print_day_details_cb): use ECalModelGenerateInstancesData
 	(print_day_long_event): use event color
 	(print_day_event): ditto
+	(print_month_small): use e_cal_model_generate_instances
+	(instance_cb): use ECalModelGenerateInstancesData
 
 2004-01-18  Radek Doulik  <rodo@ximian.com>
 
